adding compress image and fixed resurge image product

--- a/ui/css/resurge.css
+++ b/ui/css/resurge.css
@@ -51,6 +51,9 @@ header {
   header {
     height: 100vh;
   }
+  .img-headline img {
+    width: inherit;
+  }
 }
 @media (max-width: 350px) {
   .headline h1 {
