--- a/ui/css/resurge.css
+++ b/ui/css/resurge.css
@@ -79,6 +79,7 @@ header {
   font-family: "Montserrat", sans-serif;
   text-transform: capitalize;
   font-weight: bold;
+  font-size: 2rem;
 }
 .desc p {
   font-weight: 700;
