--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -128,6 +128,9 @@ section {
     display: block;
   }
 }
+.campany{
+  opacity: 0;
+}
 /* *******MY STYLE ENDS ******* */
 
 body {
@@ -6044,19 +6047,7 @@ a.close.disabled {
   display: none;
 }
 
-.toast-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 0.25rem 0.75rem;
-  color: #6c757d;
-  background-color: rgba(255, 255, 255, 0.85);
-  background-clip: padding-box;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-}
+
 
 .toast-body {
   padding: 0.75rem;
@@ -11130,23 +11121,6 @@ h5,
   right: -25px;
 }
 
-.owl-custom-nav {
-  float: right;
-  position: relative;
-  z-index: 10;
-  border: 1px solid red;
-}
-.owl-custom-nav .owl-custom-prev,
-.owl-custom-nav .owl-custom-next {
-  padding: 10px;
-  font-size: 30px;
-  background: #ccc;
-  line-height: 0;
-  width: 60px;
-  text-align: center;
-  display: inline-block;
-}
-
 .bg-light {
   background: #f8f9fd !important;
 }
@@ -11285,27 +11259,6 @@ h5,
   font-size: 18px;
 }
 
-.services-2 .icon {
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  background: #a3cb4c;
-  -webkit-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
-}
-.services-2 .icon span {
-  font-size: 40px;
-  color: #000000;
-}
-
-.services-2 .text {
-  width: calc(100% - 60px);
-}
-.services-2 .text h4 {
-  font-size: 18px;
-}
-
 .carousel-stories {
   position: relative;
 }
@@ -11423,218 +11376,6 @@ h5,
   font-weight: 400;
 }
 
-.story-wrap {
-  width: 100%;
-  margin-bottom: 30px;
-}
-.story-wrap .img {
-  width: 100%;
-  height: 270px;
-  border-radius: 4px;
-}
-@media (min-width: 992px) {
-  .story-wrap .img {
-    width: 300px;
-  }
-}
-@media (max-width: 767.98px) {
-  .story-wrap .img {
-    margin-bottom: 30px;
-  }
-}
-.story-wrap .text {
-  width: 100%;
-}
-@media (min-width: 992px) {
-  .story-wrap .text {
-    width: calc(100% - 300px);
-  }
-}
-.story-wrap .text h4 {
-  font-size: 17px;
-  font-weight: 500;
-}
-.story-wrap .text h4 span {
-  color: #a3cb4c;
-}
-
-#section-counter {
-  position: relative;
-  z-index: 0;
-}
-
-.ftco-counter {
-  overflow-x: hidden;
-  position: relative;
-  padding: 4em 0;
-}
-@media (max-width: 1199.98px) {
-  .ftco-counter {
-    background-position: center center !important;
-  }
-}
-.ftco-counter .block-18 {
-  display: block;
-  width: 100%;
-}
-@media (max-width: 991.98px) {
-  .ftco-counter .block-18 {
-    margin-bottom: 2em;
-  }
-}
-.ftco-counter .text {
-  position: relative;
-}
-@media (max-width: 767.98px) {
-  .ftco-counter .text {
-    width: 100%;
-  }
-}
-.ftco-counter .text .number {
-  line-height: 1;
-  font-weight: 500;
-  font-size: 34px;
-  color: rgba(0, 0, 0, 0.8);
-  display: block;
-  margin-bottom: 10px;
-}
-.ftco-counter .text span {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-@media (max-width: 767.98px) {
-  .ftco-counter .counter-wrap {
-    margin-bottom: 20px;
-  }
-}
-
-.staff {
-  overflow: hidden;
-  border-radius: 4px;
-  margin-bottom: 30px;
-  -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-  box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-.staff .img-wrap {
-  height: 300px;
-}
-.staff .img {
-  width: 100%;
-  display: block;
-  background-position: top center;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-.staff .text {
-  position: relative;
-  background: #fff;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-.staff .text h3 {
-  font-size: 18px;
-  font-weight: 400;
-  margin-bottom: 0;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  color: #000000;
-  margin-bottom: 5px;
-}
-.staff .text .position {
-  color: #a3cb4c;
-  display: block;
-  font-weight: 500;
-  display: inline-block;
-  margin-bottom: 10px;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
-.staff .text .faded {
-  opacity: 1;
-}
-.staff .ftco-social {
-  position: absolute;
-  top: -50px;
-  left: 0;
-  right: 0;
-  padding: 15px 10px;
-  background: transparent;
-  opacity: 0;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-.staff .ftco-social li {
-  width: 30px;
-  height: 30px;
-  position: relative;
-}
-.staff .ftco-social li a {
-  color: #fff;
-  width: 30px;
-  height: 30px;
-  background: #a3cb4c;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
-}
-.staff:hover,
-.staff:focus {
-  -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
-  -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
-  box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
-}
-.staff:hover .ftco-social,
-.staff:focus .ftco-social {
-  opacity: 1;
-  top: -60px;
-}
-.staff:hover .img,
-.staff:focus .img {
-  margin-top: -10px;
-}
-.staff:hover .text,
-.staff:focus .text {
-  background: #a3cb4c;
-  color: rgba(255, 255, 255, 0.8);
-}
-.staff:hover .text h3,
-.staff:focus .text h3 {
-  color: #fff;
-}
-.staff:hover .text .position,
-.staff:focus .text .position {
-  color: rgba(255, 255, 255, 0.4);
-}
-
-.ftco-social {
-  padding: 0;
-}
-.ftco-social li {
-  list-style: none;
-  margin-right: 10px;
-  display: inline-block;
-}
-
 .form-control {
   height: 52px !important;
   background: #fff !important;
@@ -11724,77 +11465,6 @@ textarea.form-control {
   content: "";
   opacity: 0.8;
   background: #1089ff;
-}
-
-.block-7 {
-  border-radius: 4px;
-  margin-bottom: 30px;
-  padding: 30px;
-  background: #fff;
-  -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-  box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.05);
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-@media (max-width: 991.98px) {
-  .block-7 {
-    margin-top: 30px;
-  }
-}
-.block-7 .heading-2 {
-  font-size: 20px;
-  color: #000000;
-  font-weight: 300;
-}
-.block-7 .price {
-  margin: 0;
-  padding: 0;
-  display: block;
-}
-.block-7 .price sup {
-  font-size: 24px;
-  top: -1em;
-  color: #b3b3b3;
-}
-.block-7 .price .number {
-  font-size: 60px;
-  font-weight: 300;
-  color: #000000;
-}
-.block-7 .excerpt {
-  margin-bottom: 10px;
-  color: #999999;
-  font-size: 13px;
-  font-weight: 300;
-}
-.block-7 .label2 {
-  text-transform: uppercase;
-}
-.block-7 .pricing-text,
-.block-7 .pricing-text li {
-  padding: 0;
-  margin: 0;
-}
-.block-7 .pricing-text li {
-  list-style: none;
-  margin-bottom: 15px;
-  color: #999999;
-}
-.block-7 .pricing-text li span.fa {
-  color: #a3cb4c;
-}
-.block-7 .btn-primary {
-  display: inline-block;
-}
-.block-7:hover,
-.block-7:focus {
-  -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
-  -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
-  box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
 }
 
 .consultation {
@@ -12162,125 +11832,6 @@ footer {
     display: none;
   }
 }
-
-.testimony-section {
-  position: relative;
-}
-.testimony-section .owl-carousel {
-  margin: 0;
-}
-.testimony-section .owl-carousel .owl-stage-outer {
-  padding: 20px 0 2em 0;
-  position: relative;
-}
-.testimony-section .owl-nav {
-  position: absolute;
-  top: 100%;
-  width: 100%;
-}
-.testimony-section .owl-nav .owl-prev,
-.testimony-section .owl-nav .owl-next {
-  position: absolute;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  margin-top: -10px;
-  outline: none !important;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  opacity: 0;
-}
-.testimony-section .owl-nav .owl-prev span:before,
-.testimony-section .owl-nav .owl-next span:before {
-  font-size: 30px;
-  color: rgba(0, 0, 0, 0.5);
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-.testimony-section .owl-nav .owl-prev:hover span:before,
-.testimony-section .owl-nav .owl-prev:focus span:before,
-.testimony-section .owl-nav .owl-next:hover span:before,
-.testimony-section .owl-nav .owl-next:focus span:before {
-  color: #fff;
-}
-.testimony-section .owl-nav .owl-prev {
-  left: 50%;
-  margin-left: -80px;
-}
-.testimony-section .owl-nav .owl-next {
-  right: 50%;
-  margin-right: -80px;
-}
-.testimony-section:hover .owl-nav .owl-prev,
-.testimony-section:hover .owl-nav .owl-next {
-  opacity: 1;
-}
-.testimony-section:hover .owl-nav .owl-prev {
-  left: 50%;
-  margin-left: -80px;
-}
-.testimony-section:hover .owl-nav .owl-next {
-  right: 50%;
-  margin-right: -80px;
-}
-.testimony-section .owl-dots {
-  text-align: center;
-}
-.testimony-section .owl-dots .owl-dot {
-  width: 10px;
-  height: 10px;
-  margin: 5px;
-  border-radius: 50%;
-  background: rgba(0, 0, 0, 0.1);
-}
-.testimony-section .owl-dots .owl-dot.active {
-  background: #1089ff;
-}
-
-.testimony-wrap {
-  display: block;
-  position: relative;
-  padding: 30px 20px;
-  background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.03);
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.24);
-  box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.24);
-}
-.testimony-wrap .user-img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  position: relative;
-}
-.testimony-wrap .text {
-  width: calc(100% - 80px);
-  position: relative;
-}
-.testimony-wrap .quote {
-  position: absolute;
-  top: -45px;
-  left: 25px;
-  opacity: 1;
-}
-.testimony-wrap .quote i {
-  font-size: 30px;
-  color: #1089ff;
-}
-.testimony-wrap .name {
-  font-weight: 400;
-  font-size: 16px;
-  margin-bottom: 0;
-  color: #000000;
-}
-
 .image-popup {
   cursor: -webkit-zoom-in;
   cursor: -moz-zoom-in;
@@ -12380,30 +11931,6 @@ footer {
   letter-spacing: 1px;
   font-weight: 500;
   color: #006fdc;
-}
-
-.block-23 ul {
-  padding: 0;
-}
-.block-23 ul li,
-.block-23 ul li > a {
-  display: table;
-  line-height: 1.5;
-  margin-bottom: 15px;
-}
-.block-23 ul li span {
-  color: rgba(255, 255, 255, 0.7);
-}
-.block-23 ul li .icon,
-.block-23 ul li .text {
-  display: table-cell;
-  vertical-align: top;
-}
-.block-23 ul li .icon {
-  width: 40px;
-  font-size: 18px;
-  padding-top: 2px;
-  color: white;
 }
 
 .block-27 ul {
@@ -12532,22 +12059,7 @@ footer {
   color: gray;
 }
 
-/* Blog*/
-.post-info {
-  font-size: 12px;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #fff;
-  letter-spacing: 0.1em;
-}
-.post-info > div {
-  display: inline-block;
-}
-.post-info > div .seperator {
-  display: inline-block;
-  margin: 0 10px;
-  opacity: 0.5;
-}
+/******** Blogs page style goes here ******/
 
 .tagcloud a {
   text-transform: uppercase;
@@ -12564,63 +12076,7 @@ footer {
   border: 1px solid #000;
 }
 
-.comment-form-wrap {
-  clear: both;
-}
 
-.comment-list {
-  padding: 0;
-  margin: 0;
-}
-.comment-list .children {
-  padding: 50px 0 0 40px;
-  margin: 0;
-  float: left;
-  width: 100%;
-}
-.comment-list li {
-  padding: 0;
-  margin: 0 0 30px 0;
-  float: left;
-  width: 100%;
-  clear: both;
-  list-style: none;
-}
-.comment-list li .vcard {
-  width: 80px;
-  float: left;
-}
-.comment-list li .vcard img {
-  width: 50px;
-  border-radius: 50%;
-}
-.comment-list li .comment-body {
-  float: right;
-  width: calc(100% - 80px);
-}
-.comment-list li .comment-body h3 {
-  font-size: 20px;
-}
-.comment-list li .comment-body .meta {
-  text-transform: uppercase;
-  font-size: 13px;
-  letter-spacing: 0.1em;
-  color: #ccc;
-}
-.comment-list li .comment-body .reply {
-  padding: 5px 10px;
-  background: #e6e6e6;
-  color: #000000;
-  text-transform: uppercase;
-  font-size: 11px;
-  letter-spacing: 0.1em;
-  font-weight: 400;
-  border-radius: 4px;
-}
-.comment-list li .comment-body .reply:hover {
-  color: #fff;
-  background: black;
-}
 
 .search-form .form-group {
   position: relative;
